tests/machine/x/cpp/substring_builtin.mochi.error
line 5: ../../../tests/machine/x/cpp/substring_builtin.mochi.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/substring_builtin.mochi.cpp:5:18: error: ‘substring’ was not declared in this scope
    5 |         (cout << substring("mochi", 1, 4));
      |                  ^~~~~~~~~

  4 | int main() {
  5 | 	(cout << substring("mochi", 1, 4));
  6 | 	return 0;
