tests/machine/x/cpp/substring_builtin.mochi.cpp
#include <bits/stdc++.h>
using namespace std;

int main() {
	(cout << substring("mochi", 1, 4));
	return 0;
}
